UtahLiveDataTest/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AboutMe__c</fullName>
        <label>AboutMe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccountNameFormulaField__c</fullName>
        <formula>IF(  IsReviewer__c  &amp;&amp;  IsExternalUser__c  ,  OrganizationNameForExternalReviewers__c   , OrganizationAccountName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffiliatedInstitution__c</fullName>
        <formula>Contact.AffiliatedInstitution__c</formula>
        <label>Affiliated Institution(Canada demo)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantType__c</fullName>
        <formula>TEXT(Contact.Account.ApplicantType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactReference__c</fullName>
        <description>This field holds contact information which gets created when a new user is created.</description>
        <inlineHelpText>This field holds contact information which gets created when a new user is created.</inlineHelpText>
        <label>ContactReference</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DepartmentCode__c</fullName>
        <description>Department Code is used for  Mapping Users from Same Department in the Application.</description>
        <label>Department Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__DelegateFrom__c</fullName>
        <label>Delegate From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GNT__DelegateTo__c</fullName>
        <label>Delegate To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GNT__Enable508Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable 508 theme file.</description>
        <inlineHelpText>To Enable 508 theme file.</inlineHelpText>
        <label>Accessibility Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__EnableDelegate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__GGUserType__c</fullName>
        <description>Store type of GG user</description>
        <label>GG UserType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GNT__OrganizationId__c</fullName>
        <description>Organization to which a user is tied to. It is applicable for both internal and external users</description>
        <label>Organization Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>InternalUniqueID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsAdminAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will only be used by govgrantsuser who will be an admin. No other User should have this check enabled.</description>
        <inlineHelpText>admin@govgrantsuser</inlineHelpText>
        <label>IsAdminAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApplicant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TRUE ==&gt; Applicant
FALSE ==&gt; Reviewer</inlineHelpText>
        <label>Is Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExternalUser__c</fullName>
        <formula>IF (ContactId != null, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is External User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstLoginDone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true when user logs in for first time. Primarily used for Community users</description>
        <label>First Login Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsKeyContact__c</fullName>
        <formula>Contact.KeyContact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsKeyContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The field is used to indicate whether the user himself would like to act as a reviewer or not, so that while selecting users to review, their names should or should not show.</inlineHelpText>
        <label>Is Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSME__c</fullName>
        <description>Checks if the profile is a SME Reviewer</description>
        <formula>IF( Profile.Name = &apos;SME&apos;, &apos;SME&apos;, &apos;NOTSME&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>This field is used to specify the Level of the user&apos;s authority such as approval, differentiation etc.</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocationCode__c</fullName>
        <inlineHelpText>Location code of the user to identify the physical location (eg: State code or region code etc)</inlineHelpText>
        <label>Location Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>FirstName + &quot; &quot; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationAccountName__c</fullName>
        <inlineHelpText>To which organization the user belongs to?</inlineHelpText>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationNameForExternalReviewers__c</fullName>
        <label>Organization Name For External Reviewers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>GNT__OrganizationId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryAreaofExpertise__c</fullName>
        <formula>TEXT( Contact.PrimaryAreaOfExpertisePicklist__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Area of Expertise(Canada demo)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <inlineHelpText>Logged in user profile name</inlineHelpText>
        <label>Profile Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_FINET_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive errors from FINET batch processing</description>
        <inlineHelpText>Receive errors from FINET batch processing</inlineHelpText>
        <label>Receive FINET Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SponsoringAgency__c</fullName>
        <label>Sponsoring Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCJJ</fullName>
                </value>
                <value>
                    <fullName>UOVC</fullName>
                </value>
                <value>
                    <fullName>USBE</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserRoleFormulaFromContact__c</fullName>
        <formula>Contact.UserRoleFormula__c</formula>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isHideAccessibilityMode__c</fullName>
        <formula>IF($User.Id =  Id  ||  $User.ProfileName__c == &apos;System Administrator&apos; , false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isHideAccessibilityMode</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>DepartmentCode__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>DepartmentCode__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>DepartmentCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BusinessUsers</fullName>
        <booleanFilter>1 or 2 or 3 or 4</booleanFilter>
        <columns>TIMEZONE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <columns>DepartmentCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProfileName__c</field>
            <operation>notEqual</operation>
            <value>System Adminsitrator</value>
        </filters>
        <filters>
            <field>ProfileName__c</field>
            <operation>notEqual</operation>
            <value>SPI</value>
        </filters>
        <filters>
            <field>ProfileName__c</field>
            <operation>notEqual</operation>
            <value>SPA</value>
        </filters>
        <filters>
            <field>ProfileName__c</field>
            <operation>notEqual</operation>
            <value>SME</value>
        </filters>
        <label>Business Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Partner_Users</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>SponsoringAgency__c</columns>
        <columns>DepartmentCode__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partner Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>